lab1/Test/L1-A-1-21.cmm
int ;
float ZXo_j ( struct K_24W6DhjKI5x_nLWZ PnjDYXsuq8M6BaWPwkpr 
  [ 798687347 ] [ 1587791665 ] [ 728116910 ] [ 1456621043 
  ] , float wBjKhLQ_GDQuRFA_ [ 103406755 ] [ 805151584 
  ] [ 2033895574 ] [ 378270358 ] , struct WBrTEgT5_2Zn_il 
  BZuXDlS7 [ 1002630689 ] [ 1886319625 ] < , int sd8cfkD97d1bDWk 
  ) {
}
int ;
float ckCR_D , s6_N1 

;/ 
struct R {
  int ro_eicXPc2le8Yu21w [ 15294125 ] = kecCyEJ7sS2 
    , XLQh4pVJaiGdf ! ;
}dZBXIuCjK0 ( struct P9f9 OQhafzfw , float vJvnZvtKlj1sMW4SLqz 
  return ) {
}
zxRCalqvJ70tXImdzHd 